--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,18 @@
   "name": "OaMessages",
   "version": "1.0",
   "description": "Show unread Oa Messages",
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
   "browser_action": {
     "default_title": "OaMessages",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "19": "images/icon19.png",
+      "38": "images/icon38.png"
+    }
   },
   "background": {
     "scripts": [
